# Joint-Dispatching-Relocation-ADP

./: .gitignore  ADP-NHPP.ipynb  LICENSE  README.md  adp_17_19_model_N250_20260326_225629.pth  adp_17_19_model_N300_20260327_001919.pth  adp_17_19_model_N350_20260327_014900.pth  adp_17_19_model_N400_20260327_032508.pth  adp_17_19_model_N450_20260327_050537.pth  adp_17_19_model_N500_20260327_065043.pth  adp_17_19_model_ratio_0_6_20260327_182112.pth  adp_17_19_model_ratio_0_7_20260327_204230.pth  adp_17_19_model_ratio_0_8_20260327_225158.pth  adp_17_19_model_ratio_0_9_20260328_004957.pth  adp_6_8_model_N150_20260327_185808.pth  adp_6_8_model_N200_20260327_210825.pth  adp_6_8_model_N250_20260327_232519.pth  adp_6_8_model_N300_20260328_013412.pth  adp_6_8_model_N50_20260327_155831.pth  adp_6_8_model_alpha0.6_20260327_174817.pth  adp_6_8_model_alpha0.7_20260327_190328.pth  adp_6_8_model_alpha0.8_20260327_201554.pth  adp_6_8_model_alpha0.9_20260327_212641.pth  checkpoint_ep10.pth  checkpoint_ep100.pth  checkpoint_ep20.pth  checkpoint_ep30.pth  checkpoint_ep40.pth  checkpoint_ep50.pth  checkpoint_ep60.pth  checkpoint_ep70.pth  checkpoint_ep80.pth  checkpoint_ep90.pth  main.py  pyproject.toml
adp_nhpp/: evaluate_adp_nhpp.ipynb  test_adp_nhpp.py  train_adp_nhpp.ipynb  train_adp_nhpp.py
data/: get passengers.ipynb  homogeneous demand data.ipynb  nonhomogeneous demand data.ipynb
figure/: RMSE.py  daily profit.py  passenger_distribution_final_lengdstyle.py
fluid_approximation_hpp/: fluid_policy_hpp.npz  test_fluid_approximation_hpp.py  train_fluid_approximation_hpp.py
(+143 files in other folders)
