[project]
name = "joint-dispatching-relocation-adp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gurobipy>=12.0.3",
    "gym>=0.26.2",
    "matplotlib>=3.7.0",
    "nbformat>=4.2.0",
    "nhpp>=0.0.3",
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "pyarrow>=21.0.0",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "shimmy>=2.0",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "torch>=2.1.0",
]
